css/globals/footer.css
footer {
    padding: 40px;
    /* background-color: #ffffff; */
}

.footer__content {
    max-width: 100%;
    width: 100%;
}

.footer__navigation-links {
    gap: 5rem;
    flex-wrap: wrap;
}

.footer__group-links {
    column-count: 2;
}

.footer_navlink {
    color: #0E0E0E;
}

.footer__no-title {
    padding-top: 2.5rem;
}

.footer__logo-wrapper {
    max-width: 168px;
    width: 100%;
}

.footer__logo {
    width: 168px;
    height: 31px;
}

@media (max-width: 768px) {
   .footer__content,
   .footer__navigation-links {
    flex-direction: column;
   }

   .footer__content {
    align-items: center;
   }

   .footer__navigation-links {
    gap: 0;
    align-items: center;
    }

    .footer__group-links {
        column-count: 1;
    }

    .footer__no-title {
        padding-top:0; 
        margin: 0;
    }

    .footer__header-link,
    .footer__link  {
    text-align: center; }

}

